--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,14 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  intl: ^0.19.0
+  intl: ^0.17.0
   curved_labeled_navigation_bar: ^2.0.5 #latest version
   firebase_core: ^2.14.0
   firebase_database: ^10.5.7
-  
+  url_launcher: ^6.1.10  # Ensure this line is present with the latest version
   firebase_auth: ^4.3.0
+  pull_to_refresh: ^2.0.0
+  shared_preferences: ^2.3.5
   
 dev_dependencies:
   flutter_test:
@@ -24,4 +26,4 @@ dev_dependencies:
   flutter_lints: ^3.0.0
 
 flutter:
-  uses-material-design: true 
+  uses-material-design: true
