--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   firebase_auth: ^4.3.0
   pull_to_refresh: ^2.0.0
   shared_preferences: ^2.3.5
+  google_fonts: ^6.2.1
   
 dev_dependencies:
   flutter_test:
