--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   pull_to_refresh: ^2.0.0
   shared_preferences: ^2.3.5
   google_fonts: ^6.2.1
+  flutter_staggered_grid_view: ^0.7.0
   
 dev_dependencies:
   flutter_test:
