--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,15 +12,16 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   intl: ^0.17.0
-  curved_labeled_navigation_bar: ^2.0.5 #latest version
+  curved_labeled_navigation_bar: ^2.0.5 
   firebase_core: ^2.14.0
   firebase_database: ^10.5.7
-  url_launcher: ^6.1.10  # Ensure this line is present with the latest version
+  url_launcher: ^6.1.10
   firebase_auth: ^4.3.0
   pull_to_refresh: ^2.0.0
   shared_preferences: ^2.3.5
   google_fonts: ^6.2.1
   flutter_staggered_grid_view: ^0.7.0
+  sticky_headers: ^0.3.0
   
 dev_dependencies:
   flutter_test:
