--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_staggered_grid_view: ^0.7.0
   sticky_headers: ^0.3.0
+  percent_indicator: ^4.2.3
+  syncfusion_flutter_charts: ^21.2.4
+  curved_navigation_bar: ^1.0.6
   
 dev_dependencies:
   flutter_test:
