--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,12 @@ dependencies:
   percent_indicator: ^4.2.3
   syncfusion_flutter_charts: ^21.2.4
   curved_navigation_bar: ^1.0.6
+  http: ^1.1.0
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
+  firebase_messaging: ^14.7.10
+  firebase_analytics: ^10.8.0
+  flutter_local_notifications: ^14.1.5
   
 dev_dependencies:
   flutter_test:
