--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_messaging: ^14.7.10
   firebase_analytics: ^10.8.0
   flutter_local_notifications: ^14.1.5
+  connectivity_plus: ^6.1.2
   
 dev_dependencies:
   flutter_test:
