--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   firebase_analytics: ^10.8.0
   flutter_local_notifications: ^14.1.5
   connectivity_plus: ^6.1.2
+  flutter_animate: ^4.5.2
+  rxdart: ^0.28.0
+  provider: ^6.1.2
 
   
 dev_dependencies:
